# ShadeLink-VPN

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main  main.cpp  make_deb.sh  setup.sh  shadelink_1.0.deb  test_shadelink.sh  version.txt  vpn_free.desktop
.github/workflows/: cpp-build.yml
deb_package/DEBIAN/: conffiles  control  postinst
deb_package/usr/share/applications/: shadelink.desktop
server/: server.py
src/core/: EventManager.cpp  EventManager.hpp  TunInterface.cpp  TunInterface.hpp
src/crypto/: Encryptor.cpp  Encryptor.hpp
src/network/: SocketHandler.cpp  SocketHandler.hpp
